k8s-config/05_Ingress/be4after-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: be4after-ingress
  labels:
    name: be4after-ingress
  annotations:
    # 어떤 발급자를 통해 인증서를 발급받을지 결정한다.
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
spec:
  ingressClassName: nginx
  # 인증서를 적용할 도메인을 설정한다.
  tls:
  - secretName: be4after-tls-secret
    hosts:
    - be4after-api.com
    - be4after-app.com
  rules:
  # 호스트 기반의 라우팅 (Host-Based Routing)
  # 하나의 인그레스에서 여러 도메인 이름에 대해 서로 다른 서비스로 트래픽을 라우팅한다.
  - host: be4after-api.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: be4after-api-service
            port: 
              number: 8088
  - host: be4after-app.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: be4after-vue-service
            port:
              number: 80
